data/derived/comb/progs/unify/prog0602.ml.out
Characters 707-717:
  (atan(res1) + atan(res2) - atan(res3)) *. 2 / (3.0 *. pi)
   ^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
